--- a/trakberry/templates/pie.html
+++ b/trakberry/templates/pie.html
@@ -15,6 +15,12 @@
 		<button style="background-color: #7f9180;border-radius: 10px;width:130px;height:30px;font-weight: 600;" onclick="window.location.href='{{request.session.local_toggle}}/next_epv';"><center><font color="#000000"> Next Week >></font></center></button>
 		{% endif %}
 		<div id="piechart_3d" style="width: 70%; height: 500px;"></div>
+		
+
+		<font style="font-size: 16px; color:rgb(250, 247, 103); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
+		95% of all EPVs are to be completed by Friday of each week. <br>
+		Any outstanding EPVs must be completed on the weekend.<br>
+		</font>
 	</center>
 	</div>
 	<div class="frame9">
