--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -64,7 +64,7 @@
 												</ul>
 											</li>
 
-											<li><a href="{{request.session.local_toggle}}/tech_pm_summary">CNC Tech PMs</a></li>
+											<!-- <li><a href="{{request.session.local_toggle}}/tech_pm_summary">CNC Tech PMs</a></li> -->
 
 										</ul>
 									</li>
