--- a/trakberry/templates/cell_track_3214.html
+++ b/trakberry/templates/cell_track_3214.html
@@ -419,7 +419,7 @@
 	</td>
 </form>
 
-{% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>10R140 3214 Cell Track</u></font>
+{% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>AB1V 50-5401 Cell Track</u></font>
 	<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#d8ff49" onclick="track_history()">History</button> </center>
@@ -517,12 +517,12 @@
 			</tr></table></center>
 
 			<center><table id="mainline"><tr> <!-- Laser -->
-				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Laser</font>
+				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Wash</font>
 					<font style="font-weight:bolder;font-size:85%;"><br>({{op.120}})</font></center></td>
-				<td bgcolor={{codes.9.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.9.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.9.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-						{{codes.9.0}}</a></font>
-					<font style="font-weight:bolder;font-size:70%;">({{codes.9.3}})</font></center><br></td>
+				<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.10.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.10.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes.10.0}}</a></font>
+					<font style="font-weight:bolder;font-size:70%;">(Total:{{codes.10.3}})</font></center><br></td>
 			</tr></table></center>
 
 
