--- a/trakberry/templates/redirect_hr.html
+++ b/trakberry/templates/redirect_hr.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/temp_hr" />
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/hr" />
