--- a/trakberry/templates/cell_track_8670.html
+++ b/trakberry/templates/cell_track_8670.html
@@ -419,7 +419,7 @@
 	</td>
 </form>
 
-{% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>AB1V 8670 Cell Track</u></font>
+{% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>AB1V 5404 Cell Track</u></font>
 	<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#d8ff49" onclick="track_history()">History</button> </center>
@@ -450,16 +450,16 @@
 						<td bgcolor={{codes.0.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 							<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.0.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.0.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 								{{codes.0.0}}</a></font>
-							<font style="font-weight:bolder;font-size:70%;">({{codes.0.3}})</font></center><br></td>
+							<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
 							<td bgcolor={{codes.1.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 								<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.1.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.1.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 									{{codes.1.0}}</a></font>
-								<font style="font-weight:bolder;font-size:70%;">({{codes.1.3}})</font></center><br></td>
+								<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
 
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
 						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 25</font>
-							<font style="font-weight:bolder;font-size:85%;"><br>({{op.40}})</font></center></td>
+							<font style="font-weight:bolder;font-size:85%;"><br>({{op.25}})</font></center></td>
 						<td bgcolor={{codes.2.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 							<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.2.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.2.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 								{{codes.2.0}}</a></font>
@@ -473,7 +473,7 @@
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
-						<font style="font-weight:bolder;font-size:85%;"><br>({{op.50}})</font></center></td>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.30}})</font></center></td>
 
 					<td bgcolor={{codes.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.4.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.4.0}}', 'newwindow', 'width=1400, height=600'); return false;">
@@ -494,25 +494,25 @@
 
 			<center><table id="mainline"><tr> <!-- OP80 -->
 				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 35</font>
-					<font style="font-weight:bolder;font-size:85%;"><br>({{op.80}})</font></center></td>
+					<font style="font-weight:bolder;font-size:85%;"><br>({{op.35}})</font></center></td>
 				<td bgcolor={{codes.7.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.7.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.7.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.7.0}}</a></font>
-					<font style="font-weight:bolder;font-size:70%;">({{codes.7.3}})</font></center><br></td>
+					<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
 			</tr></table></center>
 
 			<center><table id="mainline"><tr> <!-- OP90 -->
 				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font>
-					<font style="font-weight:bolder;font-size:85%;"><br>({{op.90}})</font></center></td>
+					<font style="font-weight:bolder;font-size:85%;"><br>({{op.40}})</font></center></td>
 				<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.8.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.8.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.8.0}}</a></font>
-					<font style="font-weight:bolder;font-size:70%;">({{codes.8.3}})</font></center><br></td>
+					<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
 			</tr></table></center>
 
 			<center><table id="mainline"><tr> <!-- OP 50 -->
 				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 50</font>
-					<font style="font-weight:bolder;font-size:85%;"><br>({{op.100}})</font></center></td>
+					<font style="font-weight:bolder;font-size:85%;"><br>({{op.50}})</font></center></td>
 				<td bgcolor={{codes.9.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.9.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.9.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.9.0}}</a></font>
@@ -521,11 +521,20 @@
 
 			<center><table id="mainline"><tr> <!-- OP 60  Balancer-->
 				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 60</font>
-					<font style="font-weight:bolder;font-size:85%;"><br>({{op.110}})</font></center></td>
+					<font style="font-weight:bolder;font-size:85%;"><br>({{op.60}})</font></center></td>
 				<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.10.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.10.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.10.0}}</a></font>
 					<font style="font-weight:bolder;font-size:70%;">({{codes.10.3}})</font></center><br></td>
+			</tr></table></center>
+
+			<center><table id="mainline"><tr> <!-- OP Laser-->
+				<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Laser</font>
+					<font style="font-weight:bolder;font-size:85%;"><br>({{op.130}})</font></center></td>
+				<td bgcolor={{codes.13.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.13.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.13.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+						{{codes.13.0}}</a></font>
+					<font style="font-weight:bolder;font-size:70%;">({{codes.13.3}})</font></center><br></td>
 			</tr></table></center>
 
 
