--- a/trakberry/templates/hourly_counts.html
+++ b/trakberry/templates/hourly_counts.html
@@ -13,7 +13,9 @@ Hourly 8670: {{request.session.count_6420}}
 <br>
 Hourly 5401: {{request.session.count_6418}}
 <br>
-Hourly 5404: {{request.session.count_5404}}
+Hourly 5404(1722): {{request.session.count_1722}}
+<br>
+Hourly 5404(Laser): {{request.session.count_5404}}
 <br>
 Hourly 6114: {{request.session.count_6114}}
 </body></html>
