Going to try and read from mirrored DB instead of local one

--- a/trakberry/templates/cell_track_8670.html
+++ b/trakberry/templates/cell_track_8670.html
@@ -422,7 +422,7 @@
 {% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>AB1V 5404 Cell Track</u></font>
 	<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#d8ff49" onclick="track_history()">History</button> </center>
+ </center>
 	<br></td>
 {% endif %}
 <!--   *****************************************************************************************************************    -->
@@ -498,7 +498,7 @@
 				<td bgcolor={{codes.7.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.7.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.7.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.7.0}}</a></font>
-					<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
+					<font style="font-weight:bolder;font-size:70%;">({{codes.7.3}})</font></center><br></td>
 			</tr></table></center>
 
 			<center><table id="mainline"><tr> <!-- OP90 -->
@@ -507,7 +507,7 @@
 				<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 					<a href="{{request.session.local_toggle}}/track_graph_8670/get/{{codes.8.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_8670/get/{{codes.8.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 						{{codes.8.0}}</a></font>
-					<font style="font-weight:bolder;font-size:70%;">(No Track)</font></center><br></td>
+					<font style="font-weight:bolder;font-size:70%;">({{codes.8.3}})</font></center><br></td>
 			</tr></table></center>
 
 			<center><table id="mainline"><tr> <!-- OP 50 -->
