--- a/trakberry/templates/prod_counts.html
+++ b/trakberry/templates/prod_counts.html
@@ -318,7 +318,19 @@
 	</tr>
 {% endfor %}
 
-
+{% for i in request.session.totals_5401 %}
+	<tr>
+		<td bgcolor="#ffffff"><center><b>50-5401</b></center></td>
+		{% for ii in i %}
+			<td bgcolor="#ffffff"><center>{{ii.3}}</center></td>
+		{% endfor %}
+		{% for x in request.session.op_span_5401 %}
+			{% if x.0 == i.0.0 and x.2 > 0 %} 
+				<td  bgcolor="#ffffff" rowspan="{{x.2}}"><center><b>{{x.3}}</b></center></td>
+			{% endif %}
+		{% endfor %}
+	</tr>
+{% endfor %}
 
 </table>
 <br><br>
