updated 10R Cell Track for OP30/40 uplift

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -703,17 +703,19 @@
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 				<center><table id="upline"><tr> <!-- OP30 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP40 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-
-				<center><table id="upline"><tr> <!-- OP70 -->
 					<td bgcolor={{codes.31.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.31.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.31.3}})</font></center><br></td>
+				</tr></table></center>
+				<center><table id="upline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.31.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.32.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.31.3}})</font></center><br></td>
+				</tr></table></center>
+
+				<center><table id="upline"><tr> <!-- OP70 -->
 				</tr></table></center>
 				<center><table id="upline"><tr> <!-- OP50 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
