added balancer and slurry

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -692,7 +692,7 @@
 
 
 
-			<div class="framec">  <!-- Center Line Production-->
+			<div class="framec">  <!-- Uplift Production-->
 				<center><table id="mainline"><tr> <!-- OP60 -->
 
 
@@ -715,11 +715,20 @@
 						<font style="font-weight:bolder;font-size:70%;">({{codes.31.3}})</font></center><br></td>
 				</tr></table></center>
 
-				<center><table id="upline"><tr> <!-- OP70 -->
+				<center><table id="upline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.33.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.33.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.33.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.33.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.33.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP50 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>				
+
+				<center><table id="upline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.34.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.34.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.34.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.34.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.34.3}})</font></center><br></td>
+				</tr></table></center>
+
 				<center><table id="upline"><tr> <!-- OP70 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
