--- a/trakberry/templates/cell_track_9341_TV.html
+++ b/trakberry/templates/cell_track_9341_TV.html
@@ -1,6 +1,6 @@
 <html>
 	{% if request.session.track_history != 1 %}
-	<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/cell_track_9341_TV/" />
+	<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/cell_track_9341" />
 	{% endif %}
 <head>
 <!-- Test  -->
