--- a/trakberry/templates/cell_track_1467.html
+++ b/trakberry/templates/cell_track_1467.html
@@ -1,4 +1,5 @@
 <html>
+	<meta http-equiv="refresh" content="0; url=http://10.4.1.234:8000/dashboard/cell_track_1467/" />
 	{% if request.session.track_history != 1 %}
 	<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/cell_track_1467/" />
 	{% endif %}
