--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -1,5 +1,7 @@
 <html>
+
 	{% if request.session.track_history != 1 %}
+
 	<meta http-equiv="refresh" content="20; url={{request.session.local_toggle}}/cell_track_9341/" />
 	{% endif %}
 <head>
@@ -404,7 +406,7 @@
 {% if request.session.track_history = 1 %}
 
 <form action="" method="post">{% csrf_token %}
-	<td bgcolor="#DCDCDC"><br><center><font style="font-weight:bolder;font-size:120%;"><u>History &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_date}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_shift}}</u></font><br>
+	<td bgcolor={{R80}}><br><center><font style="font-weight:bolder;font-size:120%;"><u>History &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_date}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_shift}}</u></font><br>
 	<label for="shift"><font style="font-weight:bolder;font-size:70%;"></font><u><b>Shift:</u></b></u>&nbsp;&nbsp;&nbsp;</label>
 		<select style="font-size:12px;height:30px;" id="shift" name="shift" required>
 		<option value=""></option>
@@ -418,6 +420,10 @@
 		<button  style="background-color: #585858;border-radius: 10px;width:90px;height:30px;color:#d8ff49;font-size:12px;" onclick="track_return()">Return to Track</button>
 	</td>
 </form>
+
+
+
+
 
 {% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>10R80 Cell Track</u></font>
 	<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font>
@@ -530,7 +536,10 @@
 				<center><table id="noneline"><tr> <!-- OP30 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 90</font>
 						<font style="font-weight:bolder;font-size:85%;"><br>({{op.90}})</font></center></td>
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+						<td style="border-radius: 10px;" bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+							<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+								{{codes.29.0}}</a></font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.29.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP100 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 100</font>
@@ -551,57 +560,17 @@
 				<center><table id="noneline"><tr> <!-- OP120 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">Final</font>
                     <font style="font-weight:bolder;font-size:85%;"><br>({{codes.30.3}})</font></center><br></td>
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-			</div>
-
-
-
-
-			<div class="framec">  <!-- Center Line Production-->
-				<center><table id="noneline"><tr> <!-- OP60 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP10 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP30 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP40 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP50 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP60 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP70 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="midline"><tr> <!-- OP110 -->
-					<td style="border-radius: 10px;" bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
-						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.29.0}}', 'newwindow', 'width=1400, height=600'); return false;">
-							{{codes.29.0}}</a></font>
-						<font style="font-weight:bolder;font-size:70%;">({{codes.29.3}})</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="noneline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
-				</tr></table></center>
-				<center><table id="midline"><tr> <!-- OP110 -->
 					<td bgcolor={{codes.30.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.30.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.30.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.30.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.30.3}})</font></center><br></td>
 				</tr></table></center>
 			</div>
+
+
+
+
+
 			<div class="frameo">  <!-- MainLine Production-->
 				<center><table id="mainline"><tr> <!-- OP60 -->
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">OffLine</font></center><br></td>
@@ -692,59 +661,78 @@
 
 
 
-			<div class="framec">  <!-- Uplift Production-->
+			<div class="frameo">  <!-- Uplift Production-->
 				<center><table id="mainline"><tr> <!-- OP60 -->
 
 
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">Uplift</font></center><br></td>
 				</tr></table></center>
 
-				<center><table id="upline"><tr> <!-- OP10 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP10 -->
+					<td bgcolor=#97A5B1><br><center><font style="font-weight:bolder;font-size:100%;color:#97A5B1;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							<font style="font-weight:bolder;font-size:70%;color:#97A5B1;">{{codes.31.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;color:#97A5B1"><br>({{codes.31.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP30 -->
+				<center><table id="mainline"><tr> <!-- OP30 -->
 					<td bgcolor={{codes.31.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.31.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.31.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP40 -->
+				<center><table id="mainline"><tr> <!-- OP40 -->
 					<td bgcolor={{codes.31.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.31.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.32.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.31.3}})</font></center><br></td>
 				</tr></table></center>
 
-				<center><table id="upline"><tr> <!-- OP40 -->
+				<center><table id="mainline"><tr> <!-- OP40 -->
 					<td bgcolor={{codes.33.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.33.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.33.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.33.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.33.3}})</font></center><br></td>
 				</tr></table></center>
 
-				<center><table id="upline"><tr> <!-- OP40 -->
+				<center><table id="mainline"><tr> <!-- OP40 -->
 					<td bgcolor={{codes.34.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
 						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.34.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.34.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 							{{codes.34.0}}</a></font>
 						<font style="font-weight:bolder;font-size:70%;">({{codes.34.3}})</font></center><br></td>
 				</tr></table></center>
 
-				<center><table id="upline"><tr> <!-- OP70 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.35.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.35.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.35.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+
+				<center><table id="mainline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.36.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.36.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.36.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.36.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.37.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.37.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.37.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.37.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.38.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.38.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.38.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.38.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP80 -->
-					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP40 -->
+					<td bgcolor={{codes.39.2}}><br><center><font style="font-weight:bolder;font-size:100%;">
+						<a href="{{request.session.local_toggle}}/track_graph_track/get/{{codes.39.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_track/get/{{codes.35.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+							{{codes.39.0}}</a></font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.39.3}})</font></center><br></td>
 				</tr></table></center>
-				<center><table id="upline"><tr> <!-- OP80 -->
+				<center><table id="mainline"><tr> <!-- OP80 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 			</div>
